@@ -2,6 +2,7 @@ package com.predictifylabs.backend.infrastructure.config;
 
 import com.predictifylabs.backend.infrastructure.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -11,6 +12,13 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+import java.util.List;
+
 import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
 
 @Configuration
@@ -22,35 +30,39 @@ public class SecurityConfiguration {
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final AuthenticationProvider authenticationProvider;
 
+    @Value("${application.cors.allowed-origins:http://localhost:4200,http://localhost:3000}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(req ->
-                        req.requestMatchers(
-                                // Auth endpoints
-                                "/api/v1/auth/**",
-                                // Swagger/OpenAPI
-                                "/v3/api-docs/**",
-                                "/swagger-ui/**",
-                                "/swagger-ui.html",
-                                // Public event endpoints (GET only)
-                                "/api/v1/events",
-                                "/api/v1/events/upcoming",
-                                "/api/v1/events/featured",
-                                "/api/v1/events/trending",
-                                "/api/v1/events/search",
-                                "/api/v1/events/slug/**",
-                                // Public organizer endpoints
-                                "/api/v1/organizers",
-                                "/api/v1/organizers/{id}",
-                                "/api/v1/organizers/{id}/events",
-                                // Public prediction endpoints
-                                "/api/v1/predictions/events/**"
-                        ).permitAll()
-                        .anyRequest().authenticated()
-                )
+                .authorizeHttpRequests(req -> req.requestMatchers(
+                        // Auth endpoints
+                        "/api/v1/auth/**",
+                        // Actuator (health checks)
+                        "/actuator/**",
+                        "/actuator/health",
+                        // Swagger/OpenAPI
+                        "/v3/api-docs/**",
+                        "/swagger-ui/**",
+                        "/swagger-ui.html",
+                        // Public event endpoints (GET only)
+                        "/api/v1/events",
+                        "/api/v1/events/upcoming",
+                        "/api/v1/events/featured",
+                        "/api/v1/events/trending",
+                        "/api/v1/events/search",
+                        "/api/v1/events/slug/**",
+                        "/api/v1/events/{id}",
+                        // Public organizer endpoints
+                        "/api/v1/organizers",
+                        "/api/v1/organizers/{id}",
+                        "/api/v1/organizers/{id}/events",
+                        // Public prediction endpoints
+                        "/api/v1/predictions/events/**").permitAll()
+                        .anyRequest().authenticated())
                 .sessionManagement(session -> session.sessionCreationPolicy(STATELESS))
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
@@ -59,14 +71,40 @@ public class SecurityConfiguration {
     }
 
     @Bean
-    public org.springframework.web.cors.CorsConfigurationSource corsConfigurationSource() {
-        var configuration = new org.springframework.web.cors.CorsConfiguration();
-        configuration.setAllowedOrigins(java.util.List.of("*"));
-        configuration.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(java.util.List.of("*"));
-        configuration.setExposedHeaders(java.util.List.of("Authorization"));
-        
-        var source = new org.springframework.web.cors.UrlBasedCorsConfigurationSource();
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+
+        // Parse allowed origins from property (comma-separated)
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+
+        // Allow all common HTTP methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
+
+        // Allow all headers (needed for Authorization, Content-Type, etc.)
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"));
+
+        // Expose headers that Angular can read
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition",
+                "X-Total-Count"));
+
+        // Allow credentials (cookies, authorization headers)
+        configuration.setAllowCredentials(true);
+
+        // How long the preflight response can be cached (1 hour)
+        configuration.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
